--- a/index.html
+++ b/index.html
@@ -73,60 +73,20 @@
 		<!--///////////////////Comienzo de SECCION/////////////////////////////-->
 		<section>
 			<div class="container-fluid bgPrimary header__container section__padding">
-				<div class="row justify-content-center">
-					<div class="col-lg-8">
-						<div class="row">
-							<div class="col-lg-4 col-md-12">
-								<img
-									src="/assets/img/directora.jpg "
-									alt="directora"
-									class="img-fluid"
-								/>
-							</div>
-
-							<div class="col-lg-8 col-md-12">
-								<img
-									src="https://via.placeholder.com/740x170"
-									alt="Nombre Directora"
-									class="img-fluid section__name--directora"
-								/>
-								<p
-									class="
-										colorTertiary
-										section__border
-										bgTertiary
-										text-dark
-										fontSizeM
-										section__info
-									"
-								>
-									Andrea es la directora y fundadora de Sinergia, a sus 43 años
-									conlleva una de las mejores academia del pais donde asisten mas
-									de 1000 alumnos por año, a participado en Grandes Eventos,
-									trabajado con los mejores profesionales y recorrido gran parte
-									del pais. Lleva mas de 20 años en el rubro de la Peluqueria, Su
-									aficion es la colorimetria y enseñar, Ademas de ser la directora
-									es la profesora de los superiores que son encargados de ya
-									capacitar a profesionales.
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
-
+				<h2 class="text-white text-center nosotros__title">Conoce Sobre Nosotros</h2>
 				<div class="row justify-content-center section__container">
 					<div class="col-lg-8">
 						<div class="row">
-							<div class="col-lg-4">
-								<div class="card w-80 bgTertiary text-white section__border p-3">
+							<div class="col-lg-4 py-5">
+								<div class="card bgTertiary text-white section__border p-3">
 									<img
 										src="./assets/img/headerFondo.jpg"
-										class="card-img-top"
+										class="img-fluid"
 										alt="..."
 									/>
 									<div class="card-body colorPrimary">
-										<h5 class="card-title">Profesores</h5>
-										<p class="card-text">
+										<h5 class="card-title fw-bold">Profesores</h5>
+										<p class="card-text fs-3">
 											Conoce Acerca de nuestros Profesores Seleccionado para
 											brindarte el mejor aprendizaje
 										</p>
@@ -138,18 +98,18 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-4">
-								<div class="card w-100 bgTertiary text-white section__border p-3">
+							<div class="col-lg-4 py-5">
+								<div class="card bgTertiary text-white section__border p-3">
 									<img
 										src="./assets/img/egresados2.png"
-										class="card-img-top"
+										class="img-fluid"
 										alt="..."
 									/>
 									<div class="card-body colorPrimary">
-										<h5 class="card-title">Academia</h5>
-										<p class="card-text my-4">
+										<h5 class="card-title fw-bold">Academia</h5>
+										<p class="card-text fs-3">
 											Conoce a fondo todos los detalles y la historia de
-											nuestra academia
+											nuestra academiada a traves de sus años
 										</p>
 										<a
 											href="#"
@@ -159,16 +119,12 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-4">
-								<div class="card w-100 bgTertiary text-white section__border p-3">
-									<img
-										src="./assets/img/wahls.png	"
-										class="card-img-top"
-										alt="..."
-									/>
+							<div class="col-lg-4 py-5">
+								<div class="card bgTertiary text-white section__border p-3">
+									<img src="./assets/img/wahls.png" class="img-fluid" alt="..." />
 									<div class="card-body colorPrimary">
-										<h5 class="card-title">Distribuidora</h5>
-										<p class="card-text">
+										<h5 class="card-title fw-bold">Distribuidora</h5>
+										<p class="card-text fs-3">
 											Conoce Acerca de nuestra distribuidora y todo los
 											productos que disponemos para brindarte
 										</p>
