--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 			integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
 			crossorigin="anonymous"
 		/>
+
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+		/>
+
 		<title>Sinergia Academia</title>
 	</head>
 	<body>
@@ -59,11 +65,19 @@
 			<div class="header__img">
 				<div class="d-block">
 					<div class="d-flex justify-content-center">
-						<img src="/assets/img/logo.png" alt="logo" class="header__logo" />
+						<img
+							src="/assets/img/logo.png"
+							alt="logo"
+							class="header__logo animate__animated animate__backInRight"
+						/>
 					</div>
 
-					<h1 class="text-white header__title">Academia Sinergia</h1>
-					<h4 class="text-center text-white">APRENDE CON NOSOTROS</h4>
+					<h1 class="text-white header__title animate__animated animate__backInLeft">
+						Academia Sinergia
+					</h1>
+					<h4 class="text-center text-white animate__animated animate__backInLeft">
+						APRENDE CON NOSOTROS
+					</h4>
 				</div>
 			</div>
 			<!--<div class="container-fluid header__container">
@@ -264,20 +278,20 @@
 					<div class="col-lg-3 mt-5">
 						<div class="container px-5 bg-dark text-white border border-warning">
 							<div class="mt-3">
-								<p class="text-end p-2 text-warning fs-4">Unisex</p>
+								<p class="text-end p-2 text-warning fs-4">Barberia</p>
 							</div>
-							<h3 class="text-warning fs-1 mb-5">Peluqueria Unisex</h3>
+							<h3 class="text-warning fs-1 mb-5">Barberia Inicial</h3>
 							<p class="fs-4">
-								¿Qué aprenderás? El curso de estilista formó durante años a los
-								estilistas más exigentes del mercado internacional. Los dueños de
-								los salones eligen este curso para formar a sus empleados. Es un
-								curso de alto nivel, donde cualquier persona egresada puede trabajar
-								y desenvolverse en todas las áreas, además forma parte de la carrera
+								¿Qué aprenderás? El curso de Barberia formó durante años a los
+								Barberos más exigentes del mercado internacional. Los dueños de los
+								salones eligen este curso para formar a sus empleados. Es un curso
+								de alto nivel, donde cualquier persona egresada puede trabajar y
+								desenvolverse en todas las áreas, además forma parte de la carrera
 								internacional que es la más importante del mundo de la belleza.
 							</p>
 							<div class="d-inline-flex mt-5">
 								<i class="far fa-calendar-alt text-warning fs-1"></i>
-								<p class="ms-3 fs-4">40 semanas</p>
+								<p class="ms-3 fs-4">16 semanas</p>
 								<i class="far fa-clock text-warning fs-1 ms-5 mt-1"></i>
 								<p class="ms-2 mt-1 fs-4">1 clase por semana</p>
 							</div>
@@ -288,7 +302,7 @@
 								</div>
 								<div class="col-lg-6 d-inline-flex mt-2">
 									<i class="fas fa-check text-warning mt-3 fs-5"></i>
-									<p class="ms-4 mt-2 fs-4">Colorimetria</p>
+									<p class="ms-4 mt-2 fs-4">Degrade</p>
 								</div>
 
 								<div class="col-lg-6 d-inline-flex">
@@ -297,11 +311,11 @@
 								</div>
 								<div class="col-lg-6 d-inline-flex">
 									<i class="fas fa-check text-warning mt-3 fs-5"></i>
-									<p class="ms-3 mt-1 fs-4">Peinados</p>
+									<p class="ms-3 mt-1 fs-4">Mulet</p>
 								</div>
 								<div class="col-lg-6 d-inline-flex">
 									<i class="fas fa-check text-warning mt-4 fs-5"></i>
-									<p class="ms-4 mt-3 fs-4">Tratamientos</p>
+									<p class="ms-4 mt-3 fs-4">Cubata</p>
 								</div>
 							</div>
 
@@ -320,7 +334,7 @@
 
 							<div class="row mt-5 mb- mb-4">
 								<div class="col-lg-5 text-center ms-4">
-									<p class="fs-1 mt-3">$ 25.000</p>
+									<p class="fs-1 mt-3">$ 10.000</p>
 								</div>
 
 								<div class="col-lg-5 text-center">
@@ -341,7 +355,7 @@
 							<div class="mt-3">
 								<p class="text-end p-2 text-warning fs-4">Unisex</p>
 							</div>
-							<h3 class="text-warning fs-1 mb-5">Peluqueria Unisex</h3>
+							<h3 class="text-warning fs-1 mb-5">Superior Unisex</h3>
 							<p class="fs-4">
 								¿Qué aprenderás? El curso de estilista formó durante años a los
 								estilistas más exigentes del mercado internacional. Los dueños de
@@ -352,7 +366,7 @@
 							</p>
 							<div class="d-inline-flex mt-5">
 								<i class="far fa-calendar-alt text-warning fs-1"></i>
-								<p class="ms-3 fs-4">40 semanas</p>
+								<p class="ms-3 fs-4">12 semanas</p>
 								<i class="far fa-clock text-warning fs-1 ms-5 mt-1"></i>
 								<p class="ms-2 mt-1 fs-4">1 clase por semana</p>
 							</div>
@@ -363,20 +377,20 @@
 								</div>
 								<div class="col-lg-6 d-inline-flex mt-2">
 									<i class="fas fa-check text-warning mt-3 fs-5"></i>
-									<p class="ms-4 mt-2 fs-4">Colorimetria</p>
+									<p class="ms-4 mt-2 fs-4">Decoloracion Global</p>
 								</div>
 
 								<div class="col-lg-6 d-inline-flex">
 									<i class="fas fa-check text-warning mt-4 fs-5"></i>
-									<p class="ms-4 mt-3 fs-4">Cortes</p>
+									<p class="ms-4 mt-3 fs-4">Tecnicas avanzadas</p>
 								</div>
 								<div class="col-lg-6 d-inline-flex">
 									<i class="fas fa-check text-warning mt-3 fs-5"></i>
-									<p class="ms-3 mt-1 fs-4">Peinados</p>
+									<p class="ms-3 mt-1 fs-4">reflejos</p>
 								</div>
 								<div class="col-lg-6 d-inline-flex">
 									<i class="fas fa-check text-warning mt-4 fs-5"></i>
-									<p class="ms-4 mt-3 fs-4">Tratamientos</p>
+									<p class="ms-4 mt-3 fs-4">fantasias</p>
 								</div>
 							</div>
 
@@ -395,7 +409,7 @@
 
 							<div class="row mt-5 mb- mb-4">
 								<div class="col-lg-5 text-center ms-4">
-									<p class="fs-1 mt-3">$ 25.000</p>
+									<p class="fs-1 mt-3">$ 15.000</p>
 								</div>
 
 								<div class="col-lg-5 text-center">
@@ -452,7 +466,23 @@
 
 		<footer class="bg-dark">
 			<div class="footer__secondary py-3">
-				<p class="footer__text"></p>
+				<div class="row d-flex text-center fs-1">
+					<div class="col-lg-3">
+						<a href="/index.html" class="text-decoration-none">Home</a>
+					</div>
+					<div class="col-lg-2">
+						<a href="/views/cursos.html" class="text-decoration-none">Cursos</a>
+					</div>
+					<div class="col-lg-2">
+						<a href="/views/productos.html" class="text-decoration-none">Productos</a>
+					</div>
+					<div class="col-lg-2">
+						<a href="/views/nosotros.html" class="text-decoration-none">Nosotros</a>
+					</div>
+					<div class="col-lg-2">
+						<a href="/views/contacto.html" class="text-decoration-none">Contacto</a>
+					</div>
+				</div>
 			</div>
 
 			<div class="container text-white py-5">
