--- a/404.html
+++ b/404.html
@@ -5,15 +5,25 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<link rel="stylesheet" href="../assets/css/main.css" />
+		<link rel="stylesheet" href="/assets/css/bootstrap.css" />
+		<link rel="stylesheet" href="/assets/css/main.css" />
 
 		<title>ERROR 404</title>
 	</head>
-	<body>
-		<div class="imgError">
-			<div class="moverBoton">
-				<a class="buttonError" href="/">Go Home</a>
-			</div>
+	<body class="bodyError">
+		<div class="noise"></div>
+		<div class="overlay"></div>
+		<div class="terminal">
+			<h1>Error <span class="errorcode">404</span></h1>
+			<p class="output">
+				Es posible que la página que está buscando se haya eliminado, haya cambiado de
+				nombre o esté temporalmente no disponible.
+			</p>
+			<p class="output">
+				Por favor intente <a href="/index.html">Volver</a> o
+				<a href="/index.html">Retornar a la pagina</a>.
+			</p>
+			<p class="output">Buena Suerte.</p>
 		</div>
 	</body>
 </html>
