--- a/index.html
+++ b/index.html
@@ -80,11 +80,6 @@
 					</h4>
 				</div>
 			</div>
-			<!--<div class="container-fluid header__container">
-				<div class="row justify-content-center">
-					<div class="col-10 header__borde"></div>
-				</div>
-			</div>-->
 		</header>
 		<!--///////////////////FIN del HEADER/////////////////////////////-->
 
@@ -94,7 +89,7 @@
 				<div class="col-8 line"></div>
 			</div>
 		</div>
-		<!-- FIN 	BORDER-BOTTOM-->
+		<!-- FIN BORDER-BOTTOM-->
 
 		<!--///////////////////Comienzo de SECCION/////////////////////////////-->
 		<section>
@@ -108,7 +103,7 @@
 									<img
 										src="./assets/img/headerFondo.jpg"
 										class="img-fluid"
-										alt="..."
+										alt="imagen Nosotros"
 									/>
 									<div class="card-body colorPrimary">
 										<h5 class="card-title fw-bold">Profesores</h5>
@@ -129,7 +124,7 @@
 									<img
 										src="./assets/img/egresados2.png"
 										class="img-fluid"
-										alt="..."
+										alt="img Egresados"
 									/>
 									<div class="card-body colorPrimary">
 										<h5 class="card-title fw-bold">Academia</h5>
@@ -147,7 +142,11 @@
 							</div>
 							<div class="col-lg-4 py-5">
 								<div class="card bgTertiary text-white section__border p-3">
-									<img src="./assets/img/wahls.png" class="img-fluid" alt="..." />
+									<img
+										src="./assets/img/wahls.png"
+										class="img-fluid"
+										alt="Img distribuidora"
+									/>
 									<div class="card-body colorPrimary">
 										<h5 class="card-title fw-bold">Distribuidora</h5>
 										<p class="card-text fs-3">
@@ -250,7 +249,7 @@
 									<img
 										src="./assets/img/logo-coalix.png"
 										class="cursos__coalix"
-										alt=""
+										alt="logo coalix"
 									/>
 								</div>
 							</div>
@@ -325,7 +324,7 @@
 									<img
 										src="./assets/img/logo-coalix.png"
 										class="cursos__coalix"
-										alt=""
+										alt="logo coalix"
 									/>
 								</div>
 							</div>
@@ -400,7 +399,7 @@
 									<img
 										src="./assets/img/logo-coalix.png"
 										class="cursos__coalix"
-										alt=""
+										alt="logo coalix"
 									/>
 								</div>
 							</div>
@@ -465,7 +464,7 @@
 		<!--////////////////////////Fin Producto/////////////////////-->
 
 		<footer class="bg-dark">
-			<div class="footer__secondary py-3">
+			<div class="footer__secondary py-3 container-fluid">
 				<div class="row d-flex text-center fs-1">
 					<div class="col-lg-3">
 						<a href="/index.html" class="text-decoration-none">Home</a>
