--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	</head>
 	<body>
 		<!--///////////////////Comienzo del NAV/////////////////////////////-->
-		<nav class="navbar navbar-expand-lg navbar-light bgPrimary">
+		<nav class="navbar navbar-expand-lg navbar-dark bgPrimary">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="/index.html"
 					><img
